--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,3 +26,4 @@ run tests:
   coverage: '/TOTAL.+ ([0-9]{1,3}%)/' # This parses the coverage log to display coverage into gitlab
   rules:
     - if: '$CI_COMMIT_BRANCH == "master"'
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
