--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,8 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     # 1) Create a step that Runs a single command  'echo Hello, world!'
     # 2) Modify the step in order to run 2 commands, ‘echo Hello, world!’ and ‘pwd’
+    steps:
+      - uses: actions/checkout@v2
 
   build:
     # The type of runner that the job will run on
