--- a/.github/workflows/ci_adrien.yml
+++ b/.github/workflows/ci_adrien.yml
@@ -5,7 +5,7 @@ name: CI Adrien
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ feature/adrien_ci ]
+    branches: [ feature/adrien_ci_2 ]
   pull_request:
     branches: [ master ]
 
@@ -27,7 +27,10 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: print hello world
-        run: echo Hello, world!
+        run: |
+        echo Hello, world!
+        echo another sentence
+        pwd
 
   build:
     # The type of runner that the job will run on
