--- a/.github/workflows/ci_adrien.yml
+++ b/.github/workflows/ci_adrien.yml
@@ -27,9 +27,13 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: print hello world
+        run: echo Hello, world!
+
+      # Runs a set of commands using the runners shell
+      - name: Run a multi-line script
         run: |
-        echo Hello, world!
-        echo another sentence
+          echo Add other actions to build,
+          echo test, and deploy your project.
 
   build:
     # The type of runner that the job will run on
