--- a/.github/workflows/ci_gil.yml
+++ b/.github/workflows/ci_gil.yml
@@ -27,7 +27,10 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Print hello world
-        run: echo Hello, world!
+        run: |
+        echo "Hello, world!"
+        echo "How are you?"
+        pwd
 
   build:
     # The type of runner that the job will run on
