--- a/.github/workflows/ci_adrien.yml
+++ b/.github/workflows/ci_adrien.yml
@@ -50,3 +50,6 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: "3.8"
+
+      - name: Run lint
+        run: make lint
